# alfa

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  PROJECT_SUMMARY.md  QUICK_START.md  README.md  RESTRUCTURING.md  create_latex_test.py  docker-compose.yml  main.py  package.json  pyproject.toml  run-gradio.py  test_audio_combine.py
.github/workflows/: ci.yml  deploy-docs.yml
apps/docs/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
apps/docs/docs/: configuration.md  installation.md  intro.md  quick-start.md
apps/docs/src/components/: Features.jsx  Hero.jsx  SplitText.jsx  Stats.jsx
apps/docs/src/css/: custom.css
apps/docs/src/pages/: index.jsx
apps/gradio/: main.py
apps/gradio/prompts/: manim_scene.txt  video_scenario_physics.txt
manim_scenes/: README.md
prompts/: manim_scene.txt  simple_explanation.txt  video_scenario.txt  video_scenario_chemistry.txt  video_scenario_cs.txt  video_scenario_math.txt
