[project]
name = "alfa"
version = "0.1.0"
description = "Math Video Scenario Generator with Gradio and LLM - Creates parseable video scenarios with keyframes and animations"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gradio>=4.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0"
]
